2008-02-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorsourcefile.vala: don't write C file in
	  case of errors, fixes bug 514259

2008-02-04  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valainterface.vala, vala/valastruct.vala,
	  gobject/valaccodegeneratormethod.vala: don't generate result
	  variable when not using postconditions to avoid unnecessary name
	  conflicts with method parameters

2008-02-04  Jürg Billeter  <j@bitron.ch>

	* compiler/valacompiler.vala: fix .vapi location without -d option

2008-02-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala: add missing
	  visit_expression call for assignments, fixes bug 514255

2008-02-03  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/json-glib-1.0.vapi,
	  vapi/packages/json-glib-1.0/: add JSON-GLib bindings,
	  patch by Ali Sabil

2008-02-03  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/valacodecontext.vala,
	  compiler/valacompiler.vala, vapigen/valavapigen.vala: move
	  get_package_path method to libvala

2008-02-03  Raffaele Sandrini  <raffaele@sandrini.ch>

	* tests/arrays.vala: extend the array test with an array of structs
	  declared through the "var" keyword
	* vala/valasemanticanalyzer.vala: fix a memory management bug with
	  arrays of struct elements

2008-02-03  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: set requires_null_check for nullable
	  parameters, they're not local variables

	* vapi/gtk+-2.0.vapi: regenerated

2008-02-03  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: accept carriage returns in source files

2008-02-02  Jürg Billeter  <j@bitron.ch>

	* vala/valaproperty.vala: add missing return statement

2008-02-02  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodeassignmentbinding.vala
	  gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorclass.vala,
	  gobject/valaccodegeneratormemberaccess.vala,